<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.puppy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.puppy.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_cam" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.puppy.ui.list.RecordListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_plus"
        android:name="com.example.puppy.ui.plus.PlusFragment"
        android:label="@string/title_plus"
        tools:layout="@layout/fragment_plus" />
</navigation>